--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "openapi3-ts": "^4.1.2"
   },
   "peerDependencies": {
-    "zod": "^3.20.2"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/jest": "^29.2.5",
@@ -43,7 +43,7 @@
     "ts-jest": "^29.0.3",
     "typescript": "^5.2.2",
     "yaml": "^2.2.2",
-    "zod": "^3.22.0"
+    "zod": "github:enode/zod#5134a80e6939bc2eefa2dcedb5e5bb21061c8893"
   },
   "author": "Astea Solutions <info@asteasolutions.com>",
   "license": "MIT"
